--- a/src/index.html
+++ b/src/index.html
@@ -84,6 +84,20 @@
     </div>
   </div>
 </div>
+<div class="popup popup_type_new-avatar">
+  <div class="popup__content">
+    <button type="button" class="popup__close"></button>
+    <h3 class="popup__title">Обновить аватар</h3>
+    <form class="popup__form" name="edit-avatar" novalidate>
+      <input type="url" name="avatar" class="popup__input popup__input_type_url" 
+      id="avatar-input" 
+      placeholder="Ссылка на картинку" 
+      required>
+      <span class="avatar-input-error"></span>
+      <button type="submit" class="button popup__button">Сохранить</button>
+    </form>
+  </div>
+</div>
 
 <template id="card-template">
   <li class="places__item card">
@@ -92,7 +106,10 @@
     <div class="card__description">
       <h2 class="card__title">
       </h2>
+      <div class="like-counter">
       <button type="button" class="card__like-button"></button>
+      <span class="card__like-counter">0</span>
+      </div>
     </div>
   </li>
 </template>
