--- a/src/index.html
+++ b/src/index.html
@@ -89,7 +89,7 @@
     <button type="button" class="popup__close"></button>
     <h3 class="popup__title">Обновить аватар</h3>
     <form class="popup__form" name="edit-avatar" novalidate>
-      <input type="url" name="avatar" class="popup__input popup__input_type_url" 
+      <input type="url" name="avatar" class="popup__input popup__input_type_avatar_url" 
       id="avatar-input" 
       placeholder="Ссылка на картинку" 
       required>
